# cpp_py_shmbuf

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README_zh.md  test_blinker_minimal.py
.github/workflows/: ci.yml  coverage.yml
doc/: cpp_shm.vsdx
docs/: design_zh.md
examples/: cpp_producer.cpp
include/shm/: byte_ring_buffer.hpp  shared_memory.hpp  shm_channel.hpp
py/: BLINKER_README.md  byte_ring_buffer.py  consumer_demo.py  consumer_demo_blinker.py  requirements_blinker.txt  shm_channel.py
tests/: benchmark.cpp  test_blinker_consumer.py  test_byte_ring_buffer.cpp  test_cross_lang_consumer.py  test_cross_lang_producer.cpp
